# ai_blog_gen

./: README.md  pyproject.toml  requirements.txt
ai_blog_app/: settings.py  urls.py
api/: urls.py  views.py
blog_generator/: admin.py  models.py  urls.py  views.py
blog_generator/migrations/: 0001_initial.py  0002_product.py  0003_additionals_product_is_active_product_additionals.py  0003_product_additionals_product_is_active.py
media/: test.py
staticfiles/admin/css/: forms.css.br
templates/: all_blog.html  blog_details.html  index.html  login.html  new_year.html  signup.html
