[tool.poetry]
name = "ai-blog"
version = "0.1.0"
description = ""
authors = ["ekowi <greget103@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0"
dj-database-url = "^2.1.0"
psycopg2 = "^2.9.9"
psycopg2-binary = "^2.9.9"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
